--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "ladon",
   "version": "1.0.0",
   "description": "An HyperLedger Aries implementation of a Cloud Agent",
-  "main": "src/app.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "npx nodemon",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,9 @@
   "homepage": "https://github.com/Simo56/LadonYarn#readme",
   "devDependencies": {
     "@types/node": "^20.4.4",
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
