--- a/package.json
+++ b/package.json
@@ -27,10 +27,16 @@
   },
   "homepage": "https://github.com/Simo56/LadonYarn#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
+    "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@aries-framework/core": "^0.4.0",
+    "@aries-framework/node": "^0.4.0"
   }
 }
