--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
+    "@types/qrcode": "^1.5.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "qrcode": "^1.5.3",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
