--- a/src/configurationData.json
+++ b/src/configurationData.json
@@ -3,5 +3,7 @@
     "id": "ladonCloudAgent",
     "storageMethod": "postgres_storage",
     "connectionImageUrl": "https://ipfs.io/ipfs/QmQGTESg3BymZ7eQwppXfNXoS4YS5AVpmVHxxKD7VXtpXb?filename=LADON_CLOUDAGENT_PIXLR.COM.jpg",
-    "agentPort": 3001
+    "agentPort": 3001,
+    "seedPhrase24WordsKeplr": "edit shoe kiwi riot impulse eye steel decide tumble scout truth reopen general quarter push crumble draw present table winter relief recall vacant bundle",
+    "cheqdNetwork": "testnet"
 }
