Fix Init of the Agent + qr, now happens only once.

--- a/src/configurationData.json
+++ b/src/configurationData.json
@@ -1,4 +1,5 @@
 {
+    "label": "ladonCloudAgent",
     "walletPassword": "sdGwu!Qt6&J5sVDPrGf@DYTJL",
     "id": "ladonCloudAgent",
     "storageMethod": "postgres_storage",
