--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^3.0.1",
     "qrcode": "^1.5.3",
     "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
