--- a/src/configurationData.json
+++ b/src/configurationData.json
@@ -1,7 +1,7 @@
 {
-    "label": "ladonCloudAgent",
+    "label": "Ladon Cloud Agent",
     "walletPassword": "sdGwu!Qt6&J5sVDPrGf@DYTJL",
-    "id": "ladonCloudAgent",
+    "id": "Ladon Cloud Agent",
     "storageMethod": "postgres_storage",
     "connectionImageUrl": "https://ipfs.io/ipfs/QmQGTESg3BymZ7eQwppXfNXoS4YS5AVpmVHxxKD7VXtpXb?filename=LADON_CLOUDAGENT_PIXLR.COM.jpg",
     "agentPort": 3001,
