Created Wrapper Class for Agent
I've added LadonCloudAgent.ts instead of the old (now deprecated) agentMethods.ts.
Also added the ability to import the DID I created for the Ladon Cloud Agent wallet on the bcovrin test network

--- a/src/configurationData.json
+++ b/src/configurationData.json
@@ -6,5 +6,9 @@
     "connectionImageUrl": "https://ipfs.io/ipfs/QmQGTESg3BymZ7eQwppXfNXoS4YS5AVpmVHxxKD7VXtpXb?filename=LADON_CLOUDAGENT_PIXLR.COM.jpg",
     "agentPort": 3001,
     "seedPhrase24WordsKeplr": "edit shoe kiwi riot impulse eye steel decide tumble scout truth reopen general quarter push crumble draw present table winter relief recall vacant bundle",
-    "cheqdNetwork": "testnet"
+    "cheqdNetwork": "testnet",
+    "endpointURL": null,
+    "DIDSeed": "rT3uV8wXcA9zGnH4QbEhYpWkRmU5tD2F",
+    "DID": "BYisj4xqWijKxoMrvR1KZW",
+    "DIDVerkey": "6kQjnEQJ2NkhDWp49Vm3rmmT4ZsBeuf7kFgg77UmEpyE"
 }
