--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Simo56/LadonYarn#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
     "@types/qrcode": "^1.5.1",
@@ -51,6 +52,7 @@
     "@hyperledger/anoncreds-nodejs": "^0.1.0",
     "@hyperledger/aries-askar-nodejs": "^0.1.0",
     "@hyperledger/indy-vdr-nodejs": "^0.1.0",
+    "cors": "^2.8.5",
     "ngrok": "^5.0.0-beta.2"
   }
 }
